--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,13 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation "android.arch.lifecycle:livedata:1.1.1"
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compileOnly 'javax.annotation:jsr250-api:1.0'
     testImplementation 'junit:junit:4.12'
